More fixes for dark mode

--- a/css/cards.css
+++ b/css/cards.css
@@ -6,7 +6,7 @@
     -moz-box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
     -webkit-box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
     box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
-    color: rgba(0,0,0,.87);
+    color:var(--on-surface);
     margin: 8px;
     min-width: 290px;
     max-width: 388px;
@@ -42,7 +42,7 @@
     }
 
 .thumbnail img {
-    background-color: #fff;
+    background-color:var(--surface);
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     border-radius: 50%;
@@ -130,7 +130,7 @@
     }
 
 .subhead, .secondary-text {
-    color: rgba(0,0,0,.54);
+    color:var(--on-surface);
     font-size: 14px;
     }
 
