--- a/css/index.css
+++ b/css/index.css
@@ -28,7 +28,7 @@
   --on-primary: #000000;
   --on-secondary: #000000;
   --on-background: #ffffff;
-  --on-surface: #ffffff;
+  --on-surface: #ffffffde;
   --surface: #121212;
   --background: #272727;
   --error: #f44336;
